--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React practice</title>
+    <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
     <div id="root"></div>
@@ -31,6 +32,6 @@
 
     <!------------------------------------------------------>
 
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 </body>
 </html>
